After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 692270 - codecparsers: vc1: fix calculation of ALTPQUANT
codecparsers: vc1: fix calculation of ALTPQUANT
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 1.0.6
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks: 692273
 
 
Reported: 2013-01-22 10:05 UTC by Gwenole Beauchesne
Modified: 2013-01-24 23:23 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
codecparsers: vc1: fix calculation of ALTPQUANT (1.20 KB, patch)
2013-01-22 10:05 UTC, Gwenole Beauchesne
committed Details | Review

Description Gwenole Beauchesne 2013-01-22 10:05:36 UTC
Created attachment 234087 [details] [review]
codecparsers: vc1: fix calculation of ALTPQUANT

Hi, this fixes calculation of ALTPQUANT when DQUANT == 1. PQDIFF alters ALTPQUANT in any case. See 7.1.1.31.6.

I plan to apply this patch to all gst-plugins-bad branches. Thanks.
Comment 1 Tim-Philipp Müller 2013-01-24 23:22:54 UTC
commit 73213e273f04389660d8ab9b5ae88743d3a1e55c
Author: Gwenole Beauchesne <gwenole.beauchesne@intel.com>
Date:   Tue Jan 22 10:38:20 2013 +0100

    codecparsers: vc1: fix calculation of ALTPQUANT.
    
    Fix calculation of ALTPQUANT when DQUANT == 1. PQDIFF alters ALTPQUANT
    in any case. See 7.1.1.31.6.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=692270
    
    Signed-off-by: Gwenole Beauchesne <gwenole.beauchesne@intel.com>