gst-libs/gst/codecparsers/gstvc1parser.c
@@ -659,8 +659,12 @@ parse_vopdquant (GstBitReader * br, GstVC1FrameHdr * framehdr, guint8 dquant)
         {
           READ_UINT8 (br, vopdquant->pqdiff, 3);
 
-          if (vopdquant->pqdiff == 7)
+          if (vopdquant->pqdiff != 7)
+            vopdquant->altpquant = framehdr->pquant + vopdquant->pqdiff + 1;
+          else {
             READ_UINT8 (br, vopdquant->abspq, 5);
+            vopdquant->altpquant = vopdquant->abspq;
+          }
         }
       }
     }
